# 5020-Project

./: .gitignore  README.md  pyproject.toml
experiments/: common.py  generate_datasets.py  generate_kosarak.py  merge_result_dirs.py  run_kosarak.py  run_materialized.py  run_real.py  run_synthetic.py  summarize_results.py
experiments/configs/: real_caida_smoke.json  real_caida_template.json  real_kosarak_formal_f1_1e5_non_interleaved.json  real_kosarak_grid.json  real_kosarak_project_required_expanded.json  run_existing_kosarak_formal_f1_1e5_non_interleaved.json  run_existing_synthetic_formal_f1_1e5_non_interleaved.json  run_generated_kosarak_epsilon_sweep.json  run_generated_kosarak_equal_logical_space.json  run_generated_kosarak_project_required_expanded.json  run_generated_synthetic_epsilon_sweep.json  run_generated_synthetic_equal_logical_space.json  run_generated_synthetic_project_required_expanded.json  run_kosarak.json  run_kosarak_formal_f1_1e5_non_interleaved.json  synthetic_formal_f1_1e5_non_interleaved.json  synthetic_grid.json  (+1 more)
notebooks/: project_required_results.ipynb
report/: SEEM5020_Report.md
scripts/: finalize_epsilon_sweep_existing_datasets.sh  finalize_equal_logical_space_existing_datasets.sh  finalize_formal_existing_results.sh  finalize_project_required_expanded.sh  run_epsilon_sweep_existing_datasets.sh  run_equal_logical_space_existing_datasets.sh  run_formal_project_f1_1e5_non_interleaved.sh  run_project_required_expanded.sh  tmux_formal_existing_per_dataset.sh  tmux_run_project_required_expanded.sh
tests/: test_smoke.py
(+40 files in other folders)
