[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seem5020-project"
version = "0.1.0"
description = "SEEM5020 project code for strict turnstile streams with alpha-bounded deletions"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
